--- a/trunk/paper/introduction.tex
+++ b/trunk/paper/introduction.tex
@@ -39,10 +39,10 @@ the interested party (teacher, in our model) to modify the
 \emph{dynamics} of the environment, while leaving the reward function
 of the agent alone. We term this process of teaching {\em behaviour
   cultivation}. In more detail, we concentrate on environments
-modelled by the learner as an MDP, and allow the teacher to modify the
-environment dynamics and record them within that model. The teacher's
-goal is therefore to determine the form and the degree of the
-modifications necessary to enforce a specified behaviour upon the
+modelled by the learner as an MDP, and allow the teacher to tweak the
+environment dynamics and record the outcome within that model. The
+teacher's goal is therefore to determine the form and the degree of
+tweaking necessary to enforce a specified behaviour upon the
 learner. To achieve this goal, we first introduce a way to measure the
 divergence between the realised and the passive (when no modification
 is applied by the teacher) environment developments in a Markovian
