I can not produce varbage :( If I can say it 3 words, I don't use 11 :(

--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -40,8 +40,8 @@ the interested party (teacher, in our model) to modify the
 of the agent alone. We term this process of teaching {\em behaviour
   cultivation}. In more detail, we concentrate on environments
 modelled by the learner as an MDP, and allow the teacher to tweak the
-environment dynamics and record the outcome within that model. The
-teacher's goal is therefore to determine the form and the degree of
+environment dynamics and record the outcome within the MDP model. The
+teacher's goal is, therefore, to determine the form and the degree of
 tweaking necessary to enforce a specified behaviour upon the
 learner. To achieve this goal, we first introduce a way to measure the
 divergence between the realised and the passive (when no modification
@@ -70,8 +70,8 @@ trip to the movies. Unfortunately, although increasing the child's
 efforts, this does not facilitate the learning process. The most
 practical thing to do in this case, is to {\em modify the dynamics} --
 add safety wheels to the bicycle. Gradually raising the safety wheels
-constitues {\em behaviour cultivation}. It ultimately allows the
-child to accustom to the complete range of motion possibilities and,
+constitues {\em behaviour cultivation}. It ultimately allows the child
+to accustom to the complete range of motion possibilities and,
 eventually, ride an unabridged bicycle version.
 
 In what follows we will formally define {\em behaviour cultivation}
