--- a/paper/experiments.tex
+++ b/paper/experiments.tex
@@ -1,13 +1,16 @@
 \section{Experimental Demonstration}\label{sec: experiments}
-Consider a learner agent that is tasked with finding an optimal path
-for supply transportation between point $S$ and $T$ on a grid. The
-learner's reward is initially fixed to be $-1$ for every step it takes
-plus some values $R_{ST}$ and $R_{TS}$ for reaching point T from S and
-vice versa. In a uniform grid this would be a simple problem, however,
-the grid simulates a terrain and cells have an associated elevation.  
-As a result, any movement from one cell to another neighbouring cell
-succeeds with a probability proportional to the relative elevation of 
-the cells. Consider the situation depicted in Figure~\ref{exp_motion}. 
+The environment that the learning agent is facing in our experiments
+is based on a type of trasportation domain. Specifically, consider a
+learner agent that is tasked with finding an optimal path for supply
+transportation between point $S$ and $T$ on a grid. The learner's
+reward is initially fixed to be $-1$ for every step it takes plus some
+values $R_{ST}$ and $R_{TS}$ for reaching point T from S and vice
+versa. In a uniform grid this would be a simple problem, however, the
+grid simulates a terrain and cells have an associated elevation.  As a
+result, any movement from one cell to another neighbouring cell
+succeeds with a probability proportional to the relative elevation of
+the cells. Consider, for instance, the situation depicted in
+Figure~\ref{exp_motion}.
 
 \begin{figure}[ht]
 \centerline{\psfig{file=img/exp_motion.eps,width=5cm}}
@@ -15,32 +18,51 @@ the cells. Consider the situation depicted in Figure~\ref{exp_motion}.
 \end{figure}
 
 If the cells are of equal elevation, the movement almost always
-succeeds, e.g. moving from cell $B$ to cell $C$ in
-Figure~\ref{exp_motion}. If the source cell of the motion is lower
-than the target cell, then the motion succeeds with low
-probability. Furthermore, in this case, a non-zero probability exists
-that the direction of motion will be altered. E.g. moving from $H$ to
-$E$ is unlikely to succeed, and the agent may end up in $D$, $F$ or
-even $G$. If the motion is directed to lower the elevation, it is most
-likely will succeed, but also has certain probability to move further
-than intended. E.g. moving from $B$ to $E$ is likely to succeed, but
-the agent may end up in $H$ or $G$.
+succeeds, in particular moving from cell $B$ to cell $C$ in
+Figure~\ref{exp_motion} is practically certain. If the source cell of
+the motion is lower than the target cell, then the motion succeeds
+with low probability. Furthermore, in this case, a non-zero
+probability exists that the direction of motion will be
+altered. E.g. moving from $H$ to $E$ is unlikely to succeed, and the
+agent may end up in $D$, $F$ or even $G$. If the motion is directed to
+lower the elevation, it is most likely will succeed, but it also has a
+certain non-negligible probability to move further than
+intended. E.g. moving from $B$ to $E$ is quite likely to succeed, but
+the agent may end up in $H$ or $G$ just as well.
 
-Finding an optimal path of motion from $S$ to $T$ and back is,
+As a result of this non-uniform, and potentially even non-linear,
+response to actions, such an environment can create complex
+dependencies between motion decision at different locations on the
+grid. Finding an optimal path of motion from $S$ to $T$ and back is,
 therefore, becomes non-trivial. Still, if the probabilities of
 different transitions are given, the policy iteration algorithm can
-easily solve the problem. However, the time it takes the algorithm to
-converge to an optimal policy may vary depending on how prominent are
-the features of the terrain. Therefore it would be reasonable to
-assume that scaling the terrain (and modifying transition
-probabilities accordingly) during the initial iterations of learning,
-or shaping the landscape to ``push'' the agent in the right direction
-will result in faster convergence to the optimal solution. Our
-experiments are directed to verify this proposition using our TOP-PI
-formalism.  We also test the efficacy of directing the agent to follow
-a specific path, different to the optimal, from $S$ to $T$ using TOP-PI.
+comfortably well solve the problem. However, the time it takes the
+algorithm to converge to an optimal policy may vary depending on how
+prominent are the features of the terrain. Therefore it would be
+reasonable to assume that scaling the terrain (and modifying
+transition probabilities accordingly) during the initial iterations of
+learning, or shaping the landscape to ``push'' the agent in the right
+direction will result in faster convergence to the optimal
+solution. Our experiments are directed to verify this proposition
+using our TOP-PI formalism.  Furthermore, to demonstrate that the
+teacher can indeed cultivate a given behaviour to the degree of actually 
+enforcing it, we consider the situation where the learner is required
+to follow a path different to what would be optimal with respect to
+the environment's passive dynamics. %We also test the efficacy of
+%directing the agent to follow a specific path, different to the
+%optimal, from $S$ to $T$ using TOP-PI.
 
-For our experimental verification we consider a $4 \times 4$ grid world where the learner can move in any cardinal direction or stay put.  Each cell has a randomly assigned elevation, shown in Figure~\ref{probalt}, that modifies the dynamics of each action as described above.  The learner has a reward of $+1$ for any actions ending in the target state and $-1$ otherwise.  This results in an optimal policy of heading toward the target state in the shortest number of steps (see Figure~\ref{prevopt}).  The learner uses policy iteration to find a policy maximising expected discounted sum of future rewards.  The teacher can arbitrarily modify the underlying dynamics of the environment
+We beging our experimental verification by considering a $4 \times 4$
+grid world where the learner can move in any cardinal direction or
+stay put.  Each cell has a randomly assigned elevation, shown in
+Figure~\ref{probalt}, that modifies the dynamics of each action as
+described above.  The learner has a reward of $+1$ for any actions
+ending in the target state and $-1$ otherwise.  This results in an
+optimal policy of heading toward the target state in the shortest
+number of steps (see Figure~\ref{prevopt}).  The learner uses policy
+iteration to find a policy maximising expected discounted sum of
+future rewards. The teacher can arbitrarily modify the underlying
+dynamics of the environment
 
 \begin{figure}[ht]
 \centerline{\psfig{file=img/probalt.eps,width=5cm}}
@@ -52,7 +74,16 @@ For our experimental verification we consider a $4 \times 4$ grid world where th
 \caption{\label{prevopt}Original optimal policy of our test grid.  The shaded cell is the target state, with the policy action to remain put.}
 \end{figure}
 
-In our test environment, the information about the reward state can take multiple iterations of policy iteration to propagate to all other states.  This leaves the learner to make arbitrary guesses in early iterations.  By using TOP-PI, we found that the teacher was able to shape the dynamics such that the agent is ``pushed'' in the appropriate direction from the beginning.  Without the teacher modifying the dynamics, the learner required $4$ iterations of PI to find the optimal policy.  With the addition of the teacher, the modified dynamics led the learner to follow the target policy in $3$ iterations.
+In our test environment, the information about the reward state can
+take multiple iterations of policy iteration to propagate to all other
+states.  This leaves the learner to make arbitrary guesses in early
+iterations.  By using TOP-PI, we found that the teacher was able to
+shape the dynamics such that the agent is ``pushed'' in the
+appropriate direction from the beginning.  Without the teacher
+modifying the dynamics, the learner required $4$ iterations of PI to
+find the optimal policy.  With the addition of the teacher, the
+modified dynamics led the learner to follow the target policy in $3$
+iterations.
 
 \begin{figure}[ht]
 \centerline{\psfig{file=img/newopt.eps,width=5cm}}
@@ -64,13 +95,59 @@ In our test environment, the information about the reward state can take multipl
 \caption{\label{newalt}An impression of the new terrain corresponding to the modified dynamics at the final iteration.}
 \end{figure}
 
-We also tested modifying the optimal policy of the MDP through tweaked dynamics.  Our test problem modified the optimal policy from a simple shortest path to the reward state to one that avoids the centre states and follows the edge states to the goal (see Figure~\ref{newopt}).  Our tests showed that this policy modification was achieved through the modifications, provided by the teacher, to the environment dynamics.   With the teacher using TOP-PI on the new target policy, the learner found this new policy using Policy Iteration in $4$ iterations.  Although in these experiments the terrain is not modified explicitly, an impression of the new terrain based on the tweaked dynamics of the final policy iteration is shown in Figure~\ref{newalt}.  In this domain with a maximum number of policy iterations for TOP-PI of $4$ the modifications to the dynamics tended to quite large, with the average change in each entry of the environmental dynamics $T$ ranging from $0.058$ in the first iteration to $0.036$ in the final iteration.
+However, the significance of the teacher's tweaks can be better
+appreciated if we consider the fact that it can, instead of
+facilitating, distort the learning process. Therefore, we tested our
+TOP-PI solution in the situation where the required policy was
+different from the optimal trajectory in the environment with passive
+dynamics. Specifically, we tasked our algorithm to divert the PI
+learner from a simple shortest path to the reward state to one that
+avoids the centre states and follows the edge states to the goal (see
+Figure~\ref{newopt}).  Our tests showed that this policy modification
+was indeed achievable through the modifications, provided by the
+teacher, to the environment dynamics.  With the teacher using TOP-PI
+on the new target policy, the learner found this new policy using
+Policy Iteration in $4$ iterations. This is the same time it took to
+find the shortest path policy, in spite of the new target policy being
+a distorted one.  Although in these experiments the tweaked dynamics
+were not computed based on some underlying terrain, the tweaked
+dynamics of the final policy iteration are visualised by a terrain
+impression shown in Figure~\ref{newalt}. In this domain with a
+maximum number of policy iterations for TOP-PI of $4$ the
+modifications to the dynamics tended to be relatively reasonable, with the
+average change in each entry of the environmental dynamics $T$ ranging
+from $0.058$ in the first iteration to $0.036$ in the final iteration.
 
-This policy modification method allows changes that are not possible with modifications to the reward function alone.  In our test on a $2 \times 2$ grid, we changed the policy as in Figure~\ref{envdopt}.  By modifying the reward function to achieve this policy the reward values must be strictly increasing along the path, otherwise it would be optimal to remain put.  This means the reward for the upper-left state must be less than the reward for the lower right (target) state, so the optimal action for lower-left would be to move right rather than up.  However, tweaking the dynamics allows such a policy modification.
+However, we reduced the grid size to $2\times 2$ to underline and throw
+into a sharper relief the fact that this policy modification method
+allows changes that are not possible with modifications to the reward
+function alone. In our test on a $2 \times 2$ grid, we changed the
+policy from a shortest path to a circular motion (see
+Figure~\ref{envdopt}), almost reversing the learner's motion
+tendencies under the passive environment dynamics. On the other hand,
+consider the current state of the art in the {\em incentive} based
+environment design, where reward augmentation is parameterised by
+state. To achieve the required circular policy by modifying the reward
+function, the reward values must be strictly increasing along the
+path, otherwise it would be optimal to remain put. By following the
+circular motion, it is necessary for the reward in the upper-left
+state to be less than the reward for the lower right (target)
+state. As a result the optimal action for lower-left state would
+inevitably be to move right rather than up, thus failing to induce the
+required circular motion. However, as we have demonstrated, tweaking
+the dynamics allows such a policy modification.
 
 \begin{figure}[ht]
 \centerline{\psfig{file=img/envdopt.eps,width=5cm}}
 \caption{\label{envdopt}The original optimal policy (left) and target policy (right).}
 \end{figure}
 
-Our experiments provided experimental verification of our proposed teaching method.  We verified that the method can be used both to speed up the learning process and tested this on policy iteration.  We also found that the method is able to direct the learner to a different policy by changing the dynamics of the environment.
+Our experiments provided experimental verification of our proposed
+{\em behaviour cultivation} teaching method.  We verified that the
+method can be used both to speed up the learning process and to lead
+it towards a required strategy by apllying our method to the Policy
+Iteration algorithm. We have confirmed the efficacy of our method in
+the situation where the teacher's interest constradicts, or otherwise
+interferes, with the interests of the learner by requiring to
+cultivate a behaviour significantly different from that which is
+optimal under passive environment dynamics.
