--- a/trunk/paper/experiments.tex
+++ b/trunk/paper/experiments.tex
@@ -1,6 +1,6 @@
 \section{Experimental Demonstration}\label{sec: experiments}
 The environment that the learning agent is facing in our experiments
-is based on a type of trasportation domain. Specifically, consider a
+is based on a type of transportation domain. Specifically, consider a
 learner agent that is tasked with finding an optimal path for supply
 transportation between point $S$ and $T$ on a grid. The learner's
 reward is initially fixed to be $-1$ for every step it takes plus some
@@ -52,7 +52,7 @@ the environment's passive dynamics. %We also test the efficacy of
 %directing the agent to follow a specific path, different to the
 %optimal, from $S$ to $T$ using TOP-PI.
 
-We beging our experimental verification by considering a $4 \times 4$
+We begin our experimental verification by considering a $4 \times 4$
 grid world where the learner can move in any cardinal direction or
 stay put.  Each cell has a randomly assigned elevation, shown in
 Figure~\ref{probalt}, that modifies the dynamics of each action as
@@ -145,9 +145,9 @@ the dynamics allows such a policy modification.
 Our experiments provided experimental verification of our proposed
 {\em behaviour cultivation} teaching method.  We verified that the
 method can be used both to speed up the learning process and to lead
-it towards a required strategy by apllying our method to the Policy
+it towards a required strategy by applying our method to the Policy
 Iteration algorithm. We have confirmed the efficacy of our method in
-the situation where the teacher's interest constradicts, or otherwise
+the situation where the teacher's interest contradicts, or otherwise
 interferes, with the interests of the learner by requiring to
 cultivate a behaviour significantly different from that which is
 optimal under passive environment dynamics.
