--- a/trunk/paper/model.tex
+++ b/trunk/paper/model.tex
@@ -241,18 +241,29 @@ $\Tilde{T}_{u_t}(s'|s)=\sum\limits_aT_{u_t}(s'|s,a)\pi_t(a|s)$\\\ \\
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-As we mentioned in the start of this section, KL Divergence, $D^{KL}(P||Q)$, informally measures 
-the
-difference between some desired distribution $P$ and some approximation $Q$.\footnote{Note that 
-while KL Divergence is often called the \emph{distance} between two distributions, it is, in fact, not 
-a true distance metric.}  As expected, $D^{KL}(P||Q)$ is minimized exactly when $P=Q$. That is, 
-$D^{KL}(P||P)=0$.  In our problem, the  desired distribution is $P^*(s',a'|s,a)$ which arises if the 
-learner follows the teacher's desired policy with no environmental tweaks required.  
-By using KLR as the cost function, we are able to assign costs to deviations of the probability of  
-particular state-action pairs compared to the ideal. These deviations may arise from either the 
-environmental tweak  made by the teacher, or by the learner following a non-desired policy, or 
-some combination of both, and thus our cost function balances these appropriately.
-
+As we mentioned in the start of this section, KL Divergence,
+$D^{KL}(P||Q)$, informally measures the difference between some
+factual distribution $P$ and some desired distribution
+$Q$.\footnote{Note that while KL Divergence is often called the
+  \emph{distance} between two distributions, it is, in fact, not a
+  true distance metric.}  As expected, $D^{KL}(P||Q)$ is minimized
+exactly when $P=Q$, that is, $D^{KL}(P||P)=0$. Importantly, it
+compares two distributions, rather than distribution properties, such
+as the mean or variance which are commonly used. \footnote{Consider,
+  for instance, the optimality criterea of MDPs: the {\em expected}
+  accumulated reward. Rather than being concerned with the entire
+  shape of the obtainable rewards, it only concentrates on the
+  expecations, neccessitating further solution augmentation to account
+  for requirements such as risk-aversion.}. In our problem, the
+desired distribution is $P^*(s',a'|s,a)$ which arises if the learner
+follows the teacher's desired policy with no environmental tweaks
+required.  By using KLR as the cost function, we are able to assign
+costs to the complete variety of possible long term deviations caused
+by departing from the ideal probability of state-action pair
+transition.  These deviations may arise from either the environmental
+tweak made by the teacher, or by the learner following a non-desired
+policy, or some combination of both, and thus our cost function
+balances these appropriately.
 
 %Originally, $KL$ divergence (and KRL) was designed to measure the cost
 %of mistaken encoding. That is, if a signal had come from a
