--- a/paper/teacher_em.bib
+++ b/paper/teacher_em.bib
@@ -27,12 +27,11 @@
   journal = 	 {Robotics and Autonomous Systems},
   year = 	 {2009},
   OPTkey = 	 {},
-  OPTvolume = 	 {},
+  volume = 	 {57},
   OPTnumber = 	 {},
-  OPTpages = 	 {},
+ pages = 	 {469-483},
   OPTmonth = 	 {},
   OPTnote = 	 {},
-  annote = 	 {to appear}
 }
 
 @Book{puterman_book_94,
